src/backends/clifford/clifford.h

/**
 * @file clifford.h
 * @brief Aaronson-Gottesman tableau Clifford simulator.
 *
 * OVERVIEW
 * --------
 * An n-qubit Clifford state can be specified by 2n Pauli operators -- n
 * stabilizers and n destabilizers -- together with a sign bit per row,
 * occupying @f$2n \times (2n + 1)@f$ bits.  Every Clifford gate acts on
 * the tableau in @f$O(n)@f$ elementary bit operations, and a Z-basis
 * measurement runs in @f$O(n^{2})@f$.  The central result is that this
 * representation is *complete* for Clifford circuits: the algebra of
 * @f$\mathrm{CNOT}, H, S@f$ together with the Pauli group is generated by
 * the stabilizer/destabilizer row operations implemented here.  Adding a
 * single non-Clifford gate (e.g. T) in general drops the state out of
 * the stabilizer formalism; see Aaronson and Gottesman for the full
 * extended-tableau treatment.
 *
 * The implementation is a straight transcription of Section III of
 * Aaronson and Gottesman (2004) with the row-sum convention fixed by
 * their table II (the @f$g@f$ function).  A more recent
 * performance-oriented reference for the same tableau is Gidney's Stim
 * (2021), which adds Pauli-frame tracking; the Moonlab backend is
 * algorithmically identical to the "bare-tableau" path and is presented
 * here as the primitive over which higher-level features (Pauli-frame
 * sampling, magic-state bookkeeping, surface-code simulation) can be
 * layered in subsequent releases.
 *
 * TABLEAU LAYOUT
 * --------------
 * The tableau is stored as @f$2n \times (2n + 1)@f$ bytes (one bit per
 * byte for access simplicity):
 *  - rows @f$[0, n)@f$:      destabilizers @f$\bar d_i@f$
 *  - rows @f$[n, 2n)@f$:     stabilizers @f$s_i@f$
 *  - columns @f$[0, n)@f$:   Pauli-X exponents
 *  - columns @f$[n, 2n)@f$:  Pauli-Z exponents
 *  - column @f$2n@f$:        row phase (@f$r_i \in \{0, 1\}@f$ for
 *                            @f$\pm 1@f$; Y is encoded via X=1 AND Z=1,
 *                            with phase tracked by the row-sum
 *                            function)
 * The initial state @f$|0\rangle^{\otimes n}@f$ sets destabilizer
 * @f$i = X_i@f$ and stabilizer @f$i = Z_i@f$ with all phases zero.
 *
 * COMPLEXITY
 * ----------
 *  - State construction: @f$O(n^2)@f$ bits.
 *  - Single-qubit Clifford gate: @f$O(n)@f$ bit ops per qubit.
 *  - Two-qubit CNOT: @f$O(n)@f$ per pair.
 *  - Z-basis measurement of one qubit: @f$O(n^2)@f$ worst case.
 *  - Sampling a full bitstring via @c clifford_sample_all: @f$O(n^3)@f$.
 *
 * @warning Stabilizer states are a zero-measure subset of pure states;
 *          they cannot express superpositions produced by non-Clifford
 *          gates (T, Toffoli, CCZ, general rotations).  Attempting to
 *          run a non-Clifford circuit here is a programmer error, not a
 *          silent approximation.
 *
 * REFERENCES
 * ----------
 *  - S. Aaronson and D. Gottesman, "Improved simulation of stabilizer
 *    circuits", Phys. Rev. A 70, 052328 (2004), arXiv:quant-ph/0406196.
 *    Canonical tableau description; Section III and Table II are the
 *    direct basis for the implementation.
 *  - D. Gottesman, "Stabilizer Codes and Quantum Error Correction",
 *    Caltech PhD thesis (1997), arXiv:quant-ph/9705052.  Origin of the
 *    stabilizer formalism and the Gottesman-Knill theorem.
 *  - D. Gottesman, "The Heisenberg Representation of Quantum Computers",
 *    arXiv:quant-ph/9807006 (1998).  Conceptual companion to the
 *    tableau; used for the sign-bookkeeping convention.
 *  - C. Gidney, "Stim: a fast stabilizer circuit simulator",
 *    Quantum 5, 497 (2021), arXiv:2103.02202.  Modern reference for
 *    Pauli-frame sampling and surface-code workloads.
 *
 * @since  v0.2.0
 * @stability evolving
 * @note A semver minor bump may refine the error enum.
 */

#ifndef MOONLAB_CLIFFORD_H
#define MOONLAB_CLIFFORD_H

#include <stddef.h>
#include <stdint.h>

#include "../../applications/moonlab_api.h"

#ifdef __cplusplus
extern "C" {
#endif

typedef struct clifford_tableau_t clifford_tableau_t;

typedef enum {
    CLIFFORD_SUCCESS = 0,
    CLIFFORD_ERR_INVALID = -1,
    CLIFFORD_ERR_QUBIT   = -2,
    CLIFFORD_ERR_OOM     = -3,
} clifford_error_t;

/**
 * @brief Create a fresh tableau in @f$|0\rangle^{\otimes n}@f$.
 *
 * Destabilizer @f$i@f$ is initialised to @f$X_i@f$, stabilizer @f$i@f$
 * to @f$Z_i@f$, all row phases to zero.  See Aaronson-Gottesman §III.
 *
 * @return Pointer to an owned tableau, or NULL on allocation failure.
 * @stability evolving
 */
MOONLAB_API clifford_tableau_t* clifford_tableau_create(size_t num_qubits);

/**
 * @brief Release all memory associated with the tableau.
 * @stability evolving
 */
MOONLAB_API void clifford_tableau_free(clifford_tableau_t* t);

/**
 * @brief Number of qubits this tableau was created for.
 * @stability evolving
 */
MOONLAB_API size_t clifford_num_qubits(const clifford_tableau_t* t);

/* ---- Single-qubit Clifford gates --- */

/**
 * @brief Hadamard on qubit @p q: swaps the X and Z columns.
 *
 * Every row picks up a phase flip @f$r \mathrel{\hat=} x_q z_q@f$ before
 * the exchange @f$x_q \leftrightarrow z_q@f$, the Aaronson-Gottesman
 * §III rule for @f$H@f$.  Runs over all @f$2n@f$ rows in
 * @f$O(n)@f$ word operations.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL
 *         or @p q is out of range.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_h(clifford_tableau_t* t, size_t q);

/**
 * @brief Phase gate @f$S = \mathrm{diag}(1, i)@f$ on qubit @p q.
 *
 * Applies @f$r \mathrel{\hat=} x_q z_q@f$ then @f$z_q \mathrel{\hat=}
 * x_q@f$ across all rows, i.e. @f$X \mapsto Y@f$ and @f$Z \mapsto Z@f$.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL
 *         or @p q is out of range.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_s(clifford_tableau_t* t, size_t q);

/**
 * @brief Inverse phase gate @f$S^\dagger@f$ on qubit @p q.
 *
 * Implemented as three applications of ::clifford_s, since
 * @f$S^3 = S^\dagger@f$ up to global phase.  Costs @f$O(n)@f$ per
 * application, so @f$3\times@f$ the cost of @f$S@f$.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or the first non-success code returned by
 *         the underlying ::clifford_s applications
 *         (CLIFFORD_ERR_QUBIT, -2).
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_s_dag(clifford_tableau_t* t, size_t q);

/**
 * @brief Pauli @f$X@f$ on qubit @p q.
 *
 * @f$X@f$ anticommutes with @f$Z_q@f$, so the only effect on the
 * tableau is a sign flip: @f$r \mathrel{\hat=} z_q@f$ on every row.
 * The X/Z bit pattern is unchanged.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL
 *         or @p q is out of range.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_x(clifford_tableau_t* t, size_t q);

/**
 * @brief Pauli @f$Y@f$ on qubit @p q.
 *
 * @f$Y@f$ anticommutes with both @f$X_q@f$ and @f$Z_q@f$, giving the
 * sign update @f$r \mathrel{\hat=} x_q \oplus z_q@f$ on every row with
 * the bit pattern left alone.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL
 *         or @p q is out of range.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_y(clifford_tableau_t* t, size_t q);

/**
 * @brief Pauli @f$Z@f$ on qubit @p q.
 *
 * @f$Z@f$ anticommutes with @f$X_q@f$, so the update is the sign flip
 * @f$r \mathrel{\hat=} x_q@f$ on every row.
 *
 * @param t Tableau, mutated in place.
 * @param q Qubit index in [0, n).
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL
 *         or @p q is out of range.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_z(clifford_tableau_t* t, size_t q);

/* ---- Two-qubit Clifford gate ----*/

/**
 * @brief CNOT with @p control and @p target.
 *
 * Propagates @f$x_{\rm ctrl} \to x_{\rm targ}@f$ and
 * @f$z_{\rm targ} \to z_{\rm ctrl}@f$ across all @f$2n@f$ rows, with
 * the Aaronson-Gottesman sign update
 * @f$r \mathrel{\hat=} x_c z_t (x_t \oplus z_c \oplus 1)@f$.
 *
 * @param t       Tableau, mutated in place.
 * @param control Control qubit index in [0, n).
 * @param target  Target qubit index in [0, n), distinct from
 *                @p control.
 * @return CLIFFORD_SUCCESS, or CLIFFORD_ERR_QUBIT (-2) if @p t is NULL,
 *         either index is out of range, or the two indices are equal.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_cnot(clifford_tableau_t* t, size_t control, size_t target);

/* ---- Convenience composites: CZ = H_t CNOT H_t, SWAP via three CNOTs ---- */

/**
 * @brief Controlled-Z on the (symmetric) pair @p a, @p b.
 *
 * Composed as @f$H_b\,\mathrm{CNOT}(a,b)\,H_b@f$ using the primitives
 * in this header; three @f$O(n)@f$ passes over the tableau.
 *
 * @param t Tableau, mutated in place.
 * @param a First qubit index in [0, n).
 * @param b Second qubit index in [0, n), distinct from @p a.
 * @return CLIFFORD_SUCCESS, or the first non-success code from the
 *         underlying H / CNOT steps (CLIFFORD_ERR_QUBIT, -2, for a NULL
 *         tableau, an out-of-range index, or @p a == @p b).
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_cz(clifford_tableau_t* t, size_t a, size_t b);

/**
 * @brief SWAP of qubits @p a and @p b.
 *
 * Composed as @f$\mathrm{CNOT}(a,b)\,\mathrm{CNOT}(b,a)\,
 * \mathrm{CNOT}(a,b)@f$; three @f$O(n)@f$ passes over the tableau.
 *
 * @param t Tableau, mutated in place.
 * @param a First qubit index in [0, n).
 * @param b Second qubit index in [0, n), distinct from @p a.
 * @return CLIFFORD_SUCCESS, or the first non-success code from the
 *         underlying CNOT steps (CLIFFORD_ERR_QUBIT, -2, for a NULL
 *         tableau, an out-of-range index, or @p a == @p b).
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_swap(clifford_tableau_t* t, size_t a, size_t b);

/**
 * @brief Z-basis measurement.
 *
 * Implements the two branches of Aaronson-Gottesman Algorithm 2:
 *  - @em Deterministic: every stabilizer commutes with @f$Z_q@f$.  The
 *    outcome is determined by the tableau; no RNG bit is consumed.
 *  - @em Random: some stabilizer anticommutes with @f$Z_q@f$.  A bit
 *    is drawn (via the supplied splitmix64 state), the anticommuting
 *    stabilizer is replaced by @f$\pm Z_q@f$, and the post-measurement
 *    state is updated accordingly.
 *
 * @param[in,out] t           Tableau (mutated on random outcomes).
 * @param[in]     q           Qubit to measure.
 * @param[in,out] rng_state   splitmix64 state seeded by the caller.
 * @param[out]    outcome     0 or 1.
 * @param[out]    outcome_kind 0 for deterministic, 1 for random (may be
 *                            NULL).
 * @return CLIFFORD_SUCCESS on success.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_measure(clifford_tableau_t* t, size_t q,
                                  uint64_t* rng_state,
                                  int* outcome,
                                  int* outcome_kind);

/**
 * @brief Draw an n-bit computational-basis sample.
 *
 * Equivalent to measuring every qubit in order.  Collapses the tableau.
 * Bit @f$q@f$ of @p *result is the outcome on qubit @p q.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_sample_all(clifford_tableau_t* t,
                                     uint64_t* rng_state,
                                     uint64_t* result);

/* ================================================================== */
/*  Pauli-string introspection (added v0.3.0 for CA-MPS / CA-PEPS).   */
/*                                                                    */
/*  Each entry of a Pauli string is one byte in {0=I, 1=X, 2=Y, 3=Z}. */
/*  Phase is encoded as an integer in {0, 1, 2, 3} meaning            */
/*  {+1, +i, -1, -i} respectively (powers of i).  Pure stabilizer     */
/*  rows always return phase 0 or 2 (i.e. +-1); the full {0,1,2,3}    */
/*  range is only exercised by Pauli products.                        */
/* ================================================================== */

/**
 * @brief Read the Pauli string stored in row @p row of the tableau.
 *
 * Rows [0, n) are destabilizers and row @p i stores @f$D X_i D^\dagger@f$.
 * Rows [n, 2n) are stabilizers and row @p n+i stores @f$D Z_i D^\dagger@f$.
 *
 * @param[in]  t         Tableau to read.
 * @param[in]  row       Row index in [0, 2n).
 * @param[out] out_pauli Array of length n; byte j is the Pauli on qubit j.
 * @param[out] out_phase Phase code in {0, 2} for any stabilizer row
 *                       (rows always encode Hermitian Paulis with sign ±1).
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_row_pauli(const clifford_tableau_t* t, size_t row,
                                    uint8_t* out_pauli, int* out_phase);

/**
 * @brief Conjugate an input Pauli string through the tableau's Clifford @f$D@f$:
 *        @f$P' = D P D^\dagger@f$.
 *
 * The input is a Pauli string (n bytes in {0,1,2,3}) with an optional leading
 * phase (@p in_phase in {0,1,2,3} for {+1,+i,-1,-i}).  The output is another
 * Pauli string with its accumulated phase.  No i-factors are introduced by the
 * Clifford conjugation itself, but the Pauli multiplications used internally
 * can produce them; the output @p out_phase captures the full residual phase.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_conjugate_pauli(const clifford_tableau_t* t,
                                          const uint8_t* in_pauli,
                                          int in_phase,
                                          uint8_t* out_pauli,
                                          int* out_phase);

/**
 * @brief Inverse conjugation: @f$C^\dagger P C@f$ where @p t stores @f$C@f$.
 *
 * Useful when "pushing" a Heisenberg-picture operator through the stored
 * Clifford in the opposite direction, for example CA-MPS needs
 * @f$C^\dagger T_q C@f$ to absorb a non-Clifford @f$T@f$ gate into the MPS
 * branch.  Semantics and encoding match @c clifford_conjugate_pauli; the
 * only difference is the direction of conjugation.
 * @stability evolving
 */
MOONLAB_API clifford_error_t clifford_conjugate_pauli_inverse(const clifford_tableau_t* t,
                                                  const uint8_t* in_pauli,
                                                  int in_phase,
                                                  uint8_t* out_pauli,
                                                  int* out_phase);

/**
 * @brief Allocate a deep copy of the tableau.  The clone and original can
 *        be mutated independently.  Returns NULL on allocation failure.
 * @stability evolving
 */
MOONLAB_API clifford_tableau_t* clifford_tableau_clone(const clifford_tableau_t* t);

#ifdef __cplusplus
}
#endif

#endif /* MOONLAB_CLIFFORD_H */